--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -72,15 +72,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-22T11:48:33.274201200Z",
-     "start_time": "2025-02-22T11:48:29.249238700Z"
+     "end_time": "2025-02-23T10:40:10.833857200Z",
+     "start_time": "2025-02-23T10:40:06.089826700Z"
     }
    },
    "id": "3527dae28bc4ec15"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -96,8 +96,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-22T11:48:39.330823800Z",
-     "start_time": "2025-02-22T11:48:39.327771400Z"
+     "end_time": "2025-02-23T10:40:13.954884100Z",
+     "start_time": "2025-02-23T10:40:10.832857300Z"
     }
    },
    "id": "a5ec58b468e192cd"
@@ -114,12 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "                                            sentence  relation\n",
+      "0  The system as described above has its greatest...         3\n",
+      "1  The <e1>child</e1> was carefully wrapped and b...        18\n",
+      "2  The <e1>author</e1> of a keygen uses a <e2>dis...        11\n",
+      "3  A misty <e1>ridge</e1> uprises from the <e2>su...        18\n",
+      "4  The <e1>student</e1> <e2>association</e2> is t...        12\n",
       "Index(['sentence', 'relation'], dtype='object')\n"
      ]
     }
@@ -139,8 +145,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-22T13:46:37.337499200Z",
-     "start_time": "2025-02-22T13:46:34.278302Z"
+     "end_time": "2025-02-23T10:40:17.280156200Z",
+     "start_time": "2025-02-23T10:40:15.326702600Z"
     }
    },
    "id": "9464017764b5b78e"
@@ -167,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "label_list = [\n",
@@ -181,8 +187,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-22T12:12:04.947188600Z",
-     "start_time": "2025-02-22T12:12:04.944156400Z"
+     "end_time": "2025-02-23T10:40:18.611004400Z",
+     "start_time": "2025-02-23T10:40:18.604496200Z"
     }
    },
    "id": "62a921c28a5125cd"
@@ -199,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def preprocess_text(sentence):\n",
@@ -210,8 +216,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-22T12:12:09.845817800Z",
-     "start_time": "2025-02-22T12:12:09.837800800Z"
+     "end_time": "2025-02-23T10:40:19.667953700Z",
+     "start_time": "2025-02-23T10:40:19.662044700Z"
     }
    },
    "id": "aedaca9d1ccda4d"
@@ -228,8 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique train label indices: {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18}\n",
+      "Unique test label indices: {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18}\n"
+     ]
+    }
+   ],
    "source": [
     "class REDataset(Dataset):\n",
     "    def __init__(self, texts, labels, tokenizer, max_length=128):\n",
@@ -272,13 +287,29 @@
     "train_texts = [preprocess_text(sent) for sent in df_train[\"sentence\"]]\n",
     "test_texts = [preprocess_text(sent) for sent in df_test[\"sentence\"]]\n",
     "\n",
-    "# 确保标签是数字\n",
+    "# # 确保标签是数字\n",
+    "# if df_train[\"relation\"].dtype in [int, np.int32, np.int64]:\n",
+    "#     train_labels = df_train[\"relation\"].tolist()\n",
+    "#     test_labels = df_test[\"relation\"].tolist()\n",
+    "# else:\n",
+    "#     train_labels = [label2id.get(label, 0) for label in df_train[\"relation\"]]\n",
+    "#     test_labels = [label2id.get(label, 0) for label in df_test[\"relation\"]]\n",
+    "\n",
+    "# 确保标签格式正确\n",
     "if df_train[\"relation\"].dtype in [int, np.int32, np.int64]:\n",
     "    train_labels = df_train[\"relation\"].tolist()\n",
     "    test_labels = df_test[\"relation\"].tolist()\n",
     "else:\n",
     "    train_labels = [label2id.get(label, 0) for label in df_train[\"relation\"]]\n",
     "    test_labels = [label2id.get(label, 0) for label in df_test[\"relation\"]]\n",
+    "\n",
+    "# 打印标签检查\n",
+    "print(\"Unique train label indices:\", set(train_labels))\n",
+    "print(\"Unique test label indices:\", set(test_labels))\n",
+    "\n",
+    "# 确保所有标签在范围内\n",
+    "train_labels = [min(len(label_list) - 1, label) for label in train_labels]\n",
+    "test_labels = [min(len(label_list) - 1, label) for label in test_labels]\n",
     "\n",
     "# 创建数据集\n",
     "train_dataset = REDataset(train_texts, train_labels, tokenizer)\n",
@@ -287,8 +318,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-22T14:05:38.552573200Z",
-     "start_time": "2025-02-22T14:05:38.368148300Z"
+     "end_time": "2025-02-23T10:40:20.675796200Z",
+     "start_time": "2025-02-23T10:40:20.542392700Z"
     }
    },
    "id": "722e032d172bb64f"
@@ -315,20 +346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "outputs": [
-    {
-     "data": {
-      "text/plain": "model.safetensors:   0%|          | 0.00/440M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "95f985e98e9949ba8e46ed335a48f089"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -346,8 +365,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-22T14:09:42.606971100Z",
-     "start_time": "2025-02-22T14:08:54.019312Z"
+     "end_time": "2025-02-23T10:40:22.301298200Z",
+     "start_time": "2025-02-23T10:40:22.072685700Z"
     }
    },
    "id": "81ec448357ddc27e"
@@ -364,45 +383,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU Available: True\n",
+      "GPU Count: 1\n",
+      "Current GPU: NVIDIA GeForce RTX 4090\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"GPU Available:\", torch.cuda.is_available())\n",
+    "print(\"GPU Count:\", torch.cuda.device_count())\n",
+    "print(\"Current GPU:\", torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"CPU\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-02-23T10:40:23.127659400Z",
+     "start_time": "2025-02-23T10:40:23.105379300Z"
+    }
+   },
+   "id": "f7df73929f09d67"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "outputs": [],
    "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "\n",
+    "# RTX 4090 高性能优化设置\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir=\"./results\",\n",
-    "    evaluation_strategy=\"epoch\",\n",
+    "    output_dir=\"results\",\n",
+    "    eval_strategy=\"epoch\",\n",
     "    save_strategy=\"epoch\",\n",
     "    learning_rate=2e-5,\n",
-    "    per_device_train_batch_size=16,\n",
-    "    per_device_eval_batch_size=16,\n",
+    "    per_device_train_batch_size=64,  # RTX 4090 显存足够，可提高 batch_size\n",
+    "    per_device_eval_batch_size=64,\n",
     "    num_train_epochs=5,\n",
     "    weight_decay=0.01,\n",
-    "    logging_dir=\"./logs\",\n",
-    "    logging_steps=100,\n",
+    "    logging_dir=\"logs\",\n",
+    "    logging_strategy=\"steps\",  # ✅ 确保 logging 按步数触发\n",
+    "    logging_steps=10,  # ✅ 让日志更频繁输出，方便观察\n",
+    "    save_total_limit=2,\n",
+    "    fp16=True,  # ✅ 开启自动混合精度，加快训练\n",
+    "    gradient_accumulation_steps=1,  # ✅ RTX 4090 显存足够，设为 1\n",
+    "    report_to=\"none\",  # ✅ 不使用 TensorBoard\n",
+    "    dataloader_num_workers=8,  # ✅ 增加数据加载线程，加速训练\n",
+    "    load_best_model_at_end=True,\n",
+    "    optim=\"adamw_torch\",  # ✅ 采用更稳定的 AdamW 优化器\n",
+    "    lr_scheduler_type=\"linear\",  # ✅ 改用线性学习率衰减（可能更稳定）\n",
+    "    warmup_ratio=0.06,  # ✅ 适当增加 warmup，提升稳定性\n",
+    "    disable_tqdm=False,  # ✅ 确保 Jupyter Notebook 可以显示 tqdm 进度条\n",
+    "    log_level=\"info\"  # ✅ 让 Trainer 输出更多日志信息\n",
     ")\n",
     "\n",
+    "# 计算评估指标\n",
     "def compute_metrics(eval_pred):\n",
     "    logits, labels = eval_pred\n",
     "    preds = np.argmax(logits, axis=-1)\n",
-    "    acc = accuracy_score(labels, preds)\n",
-    "    precision, recall, f1, _ = precision_recall_fscore_support(labels, preds, average=\"macro\")\n",
-    "    return {\"accuracy\": acc, \"f1\": f1, \"precision\": precision, \"recall\": recall}\n",
+    "    acc = accuracy_score(labels, preds)  \n",
+    "    precision, recall, f1, _ = precision_recall_fscore_support(labels, preds, average=\"macro\")  \n",
+    "    return {\"accuracy\": acc, \"f1\": f1, \"precision\": precision, \"recall\": recall}  "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-02-23T10:40:23.815905400Z",
+     "start_time": "2025-02-23T10:40:23.543877500Z"
+    }
+   },
+   "id": "b2b7149f6d7312b3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using auto half precision backend\n",
+      "***** Running training *****\n",
+      "  Num examples = 8,000\n",
+      "  Num Epochs = 5\n",
+      "  Instantaneous batch size per device = 64\n",
+      "  Total train batch size (w. parallel, distributed & accumulation) = 64\n",
+      "  Gradient Accumulation steps = 1\n",
+      "  Total optimization steps = 625\n",
+      "  Number of trainable parameters = 109,489,930\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm.auto import tqdm\n",
     "\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
     "    args=training_args,\n",
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=test_dataset,\n",
-    "    tokenizer=tokenizer,\n",
-    "    compute_metrics=compute_metrics,\n",
-    ")"
+    "    compute_metrics=compute_metrics\n",
+    ")\n",
+    "\n",
+    "# progress_bar = tqdm(total=training_args.num_train_epochs, desc=\"Training Progress\", unit=\"epoch\")\n",
+    "# for epoch in range(training_args.num_train_epochs):\n",
+    "#     trainer.train()  # 运行 Trainer 训练\n",
+    "#     progress_bar.update(1)  # 更新进度条\n",
+    "# progress_bar.close()\n",
+    "\n",
+    "trainer.train()\n",
+    "\n",
+    "# 获取训练历史\n",
+    "history = trainer.state.log_history\n",
+    "\n",
+    "# 转换成 DataFrame，方便分析\n",
+    "df = pd.DataFrame(history)\n",
+    "\n",
+    "# 打印日志，查看所有记录\n",
+    "print(df)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-22T14:14:14.002503400Z"
+     "start_time": "2025-02-23T10:40:24.084928400Z"
     }
    },
-   "id": "b2b7149f6d7312b3"
+   "id": "e12c214f5ac610a0"
   },
   {
    "cell_type": "markdown",
@@ -432,7 +544,10 @@
     "trainer.train()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2025-02-23T10:15:55.060351200Z"
+    }
    },
    "id": "cd91c81c8633c069"
   },
